# GitActions

./: .coverage  pyproject.toml  pytest.ini  readme.md
.github/workflows/: github-actions-demo.yml
src/: main.py
tests/: test_main.py
