[tool.poetry]
name = "gitactions"
version = "0.1.0"
description = ""
authors = ["virgilsisoe <sisoe24@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coveralls = "^3.2.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
